Fix button alignment on data page

--- a/legislative-awareness/src/components/style.css
+++ b/legislative-awareness/src/components/style.css
@@ -186,6 +186,12 @@ header {
   /* <!-- visibility: hidden; --> */
 }
 
+.toggle-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .searchbar {
   width: 16.2rem;
   margin-top: 0.5rem;
